--- a/QueryCrypter/client/package.json
+++ b/QueryCrypter/client/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@codemirror/lang-java": "^6.0.1",
+    "@uiw/codemirror-extensions-langs": "^4.21.19",
     "@uiw/react-codemirror": "^4.21.18",
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
