--- a/QueryCrypter/client/package.json
+++ b/QueryCrypter/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@uiw/codemirror-extensions-langs": "^4.21.19",
+    "@uiw/codemirror-theme-abyss": "^4.21.19",
+    "@uiw/codemirror-theme-vscode": "^4.21.19",
     "@uiw/react-codemirror": "^4.21.18",
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
