--- a/QueryCrypter/client/package.json
+++ b/QueryCrypter/client/package.json
@@ -14,6 +14,7 @@
     "@uiw/codemirror-theme-abyss": "^4.21.19",
     "@uiw/codemirror-theme-vscode": "^4.21.19",
     "@uiw/react-codemirror": "^4.21.18",
+    "axios": "^1.5.1",
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
