--- a/QueryCrypter/server/package.json
+++ b/QueryCrypter/server/package.json
@@ -17,13 +17,16 @@
     "@types/express": "^4.17.17",
     "nodemon": "^3.0.1",
     "tslint": "^6.1.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "viz": "^3.0.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dot": "^1.1.3",
     "express": "^4.18.2",
     "jison": "^0.4.18",
-    "react-native-random-uuid": "^0.1.4"
+    "react-native-random-uuid": "^0.1.4",
+    "sharp": "^0.32.6"
   }
 }
