--- a/QueryCrypter/client/package.json
+++ b/QueryCrypter/client/package.json
@@ -15,9 +15,12 @@
     "@uiw/codemirror-theme-vscode": "^4.21.19",
     "@uiw/react-codemirror": "^4.21.18",
     "axios": "^1.5.1",
+    "graphviz": "^0.0.9",
     "js-file-download": "^0.4.12",
+    "quickchart-js": "^3.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viz.js": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
