--- a/QueryCrypter/server/package.json
+++ b/QueryCrypter/server/package.json
@@ -26,6 +26,8 @@
     "dot": "^1.1.3",
     "express": "^4.18.2",
     "jison": "^0.4.18",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.13.0",
     "react-native-random-uuid": "^0.1.4",
